syntax = "proto3";
import "mailbox.proto";
import "google/protobuf/any.proto";
package LPS.Common.Rpc.InnerMessages;

message BoolArg
{
    bool PayLoad = 1;
}

message IntArg
{
    sint32 PayLoad = 1;
}

message FloatArg
{
    float PayLoad = 1;
}

message StringArg
{
    string PayLoad = 1;
}

message ListArg
{
    repeated google.protobuf.Any PayLoad = 1;
}

message ValueTupleArg
{
    repeated google.protobuf.Any PayLoad = 1;
}

message TupleArg
{
    repeated google.protobuf.Any PayLoad = 1;
}

message DictWithStringKeyArg
{
    map<string, google.protobuf.Any> PayLoad = 1;
}

message DictWithIntKeyArg
{
    map<sint32, google.protobuf.Any> PayLoad = 1;
}

message DictWithMailBoxKeyPair
{
    MailBox Key= 1;
    google.protobuf.Any Value = 2;
}

message DictWithMailBoxKeyArg
{
    repeated DictWithMailBoxKeyPair PayLoad = 1;
}

message DictWithValueTupleKeyPair
{
    google.protobuf.Any Key = 1;
    google.protobuf.Any Value = 2; 
}

message DictWithValueTupleKeyArg
{
    repeated DictWithValueTupleKeyPair PayLoad = 1;
}

message PairWithIntKey {
    sint32 Key = 1;
    google.protobuf.Any Value = 2;
}

message NullArg
{
}

message JsonArg
{
    string PayLoad = 1;
}

enum RpcType
{
  ServerInside = 0;
  ServerToClient = 1;
  ClientToServer = 2;
  ServiceToEntity = 3;
  EntityToService = 4;
}

message EntityRpc {
    uint32 RpcID = 1;
    MailBox SenderMailBox = 2;
    MailBox EntityMailBox = 3;
    string MethodName = 4;
    bool NotifyOnly = 5;
    RpcType RpcType = 6;
    optional uint32 ServiceManagerRpcId = 7;
    optional string ServiceInstanceId = 8;
    repeated google.protobuf.Any Args = 9;
};

message EntityRpcCallBack {
    uint32 RpcID = 1;
    RpcType RpcType = 2;
    MailBox TargetMailBox = 3;
    optional uint32 ServiceManagerRpcId = 4;
    optional string ServiceInstanceId = 5;
    google.protobuf.Any Result = 6;
}